--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
   
-  /* Forzamos colores claros */
   color-scheme: light;
-  color: #000000;          /* Texto negro */
-  background-color: #ffffff; /* Fondo blanco */
+  color: #000000;         
+  background-color: #ffffff; 
 }
 
 body {
@@ -14,5 +13,5 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
-  width: 100%; /* Asegura que el body ocupe todo el ancho */
+  width: 100%; 
 }
